# photon_path_tracer

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  build.bat  overnight.bat  render_config.json.deprecated  run.bat  test_err.txt  test_error.txt  test_output.txt  test_results.json  testruns.bat
doc/: 2_pass_rendering_approach.md  Path Tracer Redesign - Photon Mapping.md  Path Tracer Redesign Part 1 -  Photon Mapping.md  Path Tracer Redesign Part 2 - Path Tracing.md  audit_v2_1_report.md  debug_and_statistics.md  direction_map_revision.md  proposals_dense_grid_fix.md
doc/architecture/: Guided Path Tracing Spatial Analysis.md  Materials Handbook.md  Path Tracer Redesign Part 1 -  Photon Mapping.md  Path Tracer Redesign Part 2 - Path Tracing.md  architecture.md  architecture.md.backup  copilot_merged_instructions.md  hash grid removal.md  pbrt_gap_analysis.md  revised_guideline_v2.md  translucency.md
doc/gallery/: 3L8UTJRwYDHM8nqkQOLkdwA6ziU8_r8VBZO0C_xu6ubFRkeGnbUQuRNYG3EGud8GZONGdjl03SVPVs4Rr7XiCE0nRMAf9oob7qPrVP2QcZE.jfif
doc/prompts/: checklist_guideline.md  copilot_merged_instructions.md  gpu_expert_analysis.md  human_readable.md  initial_copilot_prompt.md  project_cleanup.md
doc/prompts/collection/: audit_dense_grid_findings.md  my_audit_20220222.md
doc/prompts/feature_DOF/: coding_plan.md
doc/prompts/feature_light_interaction/: coding_plan.md
doc/prompts/feature_materials/: material_coding_plan.md  speed_tweaks_plan.md
doc/prompts/feature_photon_bins/: prompt.md
doc/prompts/feature_screennoise_adaptive_sampling/: coding_plan.md
doc/prompts/feature_speed_test/: checklist.md
output/: photon_debug.mtl
scenes/conference/: conference.mtl
scenes/cornell_box/: cornellbox.mtl
src/: main.cpp  photon_tracer.manifest
src copy/bsdf/: bsdf.h
src copy/core/: config.h
src copy/optix/: launch_params.h  optix_device.cu
src copy/photon/: emitter.cu  hash_grid.cu  photon.h
src copy/renderer/: direct_light.cu  direct_light.h  renderer.cpp
src copy/scene/: scene.h
src/app/: cli_args.h  viewer.cpp  viewer.h
src/bsdf/: bsdf.h  bsdf_shared.h
src/core/: alias_table.h  cdf.h  cell_bin_grid.h  cell_cache.h  config.h  emitter_points.h  font_overlay.h  guided_nee.h  hash.h  ior_stack.h  light_cache.h  material_flags.h  medium.h  nee_sampling.h  phase_function.h  photon_bins.h  photon_density_cache.h  random.h  runtime_config.h  spectrum.h  sppm.h  test_data_io.h  types.h
src/debug/: debug.h  font_overlay.h  stats_collector.h
src/optix/: adaptive_sampling.cu  adaptive_sampling.h  launch_params.h  optix_bsdf.cuh  optix_camera.cuh  optix_caustic_debug.cpp  optix_debug.cuh  optix_denoiser.cpp  optix_device.cu  optix_direction_map.cuh  optix_envmap.cuh  optix_guided.cuh  optix_material.cuh  optix_nee.cuh  optix_nee_dispatch.cuh  optix_path_trace.cuh  optix_path_trace_v3.cuh  optix_photon_gather.cuh  optix_photon_trace.cpp  optix_photon_trace.cuh  optix_renderer.cpp  optix_renderer.h  optix_setup.cpp  optix_specular.cuh  optix_sppm.cuh  optix_targeted_photon.cuh  optix_upload.cpp  optix_utils.cuh
src/photon/: adaptive_emission.h  cell_bin_grid.h  cell_cache.h  dense_grid.h  density_estimator.h  direction_map.cpp  direction_map.h  emitter.h  hash_grid.cu  hash_grid.h  hash_grid.h.bkp.h  hash_histogram.h  kd_tree.h  photon.h  photon_analysis.h  photon_bins.h  photon_io.cpp  photon_io.h  specular_target.h  surface_filter.h  tri_photon_irradiance.h
src/postfx/: bloom.cu  bloom.h  postfx_params.h  postfx_pipeline.cpp  postfx_pipeline.h
src/renderer/: camera.h  direct_light.h  light_cache.h  mis.h  nee_shared.h  path_trace.h  path_tracer.cu  pixel_lighting.h  renderer.cpp  renderer.h  renderer.h.backup.h  tonemap.cu  tonemap.h
src/scene/: envmap.h  envmap_loader.cpp  material.h  obj_loader.cpp  obj_loader.h  scene.h  scene_builder.h  triangle.h
src/scene/pbrt/: pbrt_loader.cpp  pbrt_loader.h  pbrt_material_mapper.cpp  pbrt_material_mapper.h  pbrt_parser.cpp  pbrt_parser.h  ply_reader.cpp  ply_reader.h
src/volume/: medium.h  photon_beam.h
tests/: feature_speed_test.cpp  report_listener.h  test_beam_estimator.cpp  test_caustics.cpp  test_dense_grid_diagnostics.cpp  test_ground_truth.cpp  test_ground_truth_validation.cpp  test_integration.cpp  test_kd_tree.cpp  test_light_cache.cpp  test_main.cpp  test_medium.cpp  test_per_ray_validation.cpp  test_pixel_comparison.cpp  test_speed_tweaks.cpp  test_surface_filter.cpp  test_tangential_gather.cpp  test_tri_photon_irradiance.cpp
tests/runs/20260220_133757/: full_output.txt
tests/runs/20260220_133849/: full_output.txt
tests/runs/20260220_133901/: full_output.txt
tests/runs/20260220_134008/: full_output.txt
tests/runs/20260220_160539/: full_output.txt
tests/runs/20260220_160856/: full_output.txt  summary_test.txt
tests/runs/20260220_161302/: full_output.txt
tools/pbrtv4_scenes/resources/camera_file/: saved_camera.json
tools/pbrtv4_scenes/resources/doc/: Architecture.md
tools/pbrtv4_scenes/resources/obj_loader/: obj_loader.cpp  obj_loader.h  scene.h
tools/pbrtv4_scenes/src/pbrt_to_obj/: __init__.py  __main__.py  camera_extractor.py  converter.py  converter.py.bak  material_mapper.py  obj_writer.py  pbrt_parser.py  ply_reader.py  sphere_gen.py  texture_processor.py
tools/photon_map_analysis/: main.cpp  main.cpp.bak
tools/photon_map_analysis/living_room/: living_room.mtl  saved_camera.json
